--- a/PSS/PSS/Pages/Upload.razor
+++ b/PSS/PSS/Pages/Upload.razor
@@ -66,7 +66,7 @@
         errorSpanVis = "hidden";
         gpoBtnVis = "hidden";
 
-        allPaths = F.GetSupportedFiles(S.uploadFolderPath);
+        // allPaths = F.GetSupportedFiles(S.uploadFolderPath);
     }
 
 }
