--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -1,4 +1,5 @@
 @page "/import"
+@using System.Diagnostics
 
 <title>Import - PSS</title>
 <link href="css/Import.css" rel="stylesheet">
@@ -7,19 +8,35 @@
 	if (allAbsPaths is null || allAbsPaths.Count is 0)
 	{
 		<h1>No supported files found in pss_upload.</h1>
+		return;
 	}
-	else
+
+	importFiles = importFiles.OrderBy(file => file.originalFilename).ToList();
+	for (int i = 0; i < importFiles.Count; i++)
 	{
-		<h1>kill me</h1>
+		if (i + 1 < importFiles.Count && importFiles[i].originalFilename == importFiles[i + 1].originalFilename)
+		{
+			importHasItemsWithSameName = true;
+			<span style="color: red">@importFiles[i].shortPath</span><br/>
+			<span style="color: red">@importFiles[++i].shortPath</span><br/>
+		}
+		else
+		{
+			<span style="color: green">@importFiles[i].shortPath</span><br/>
+		}
 	}
 }
 
 @code {
+
 	///Stores the absolute path of every supported file in pss_import.
 	private static List<string> allAbsPaths;
 
 	///List of data about each supported file in pss_import.
 	private static List<ImportFile> importFiles;
+
+	///If pss_import contains files with the same name but in different folders, make sure the user fixes this first as it will most likely cause problems when the items get added to pss_library.
+	private static bool importHasItemsWithSameName = false;
 
 	protected override async Task OnInitializedAsync()
 	{
@@ -31,5 +48,8 @@
 			ImportFile importFile = new(absPath);
 			importFiles.Add(importFile);
 		});
+
+		
 	}
+
 }
