--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -1,17 +1,49 @@
-﻿h1 {
+﻿* {
+    scrollbar-width: none !important;
+    --left-margin: 145px; /* For things with absolute positioning, how far to be away from left side of page */
+}
+
+h1 {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(50%, 50%);
 }
 
-.errorDiv {
+#mainDiv {
+    margin-left: var(--left-margin);
+    display: flex;
+    flex-direction: column;
+}
+
+#mainDiv > .errorDiv {
     border: 2px solid red;
     border-radius: 4px;
     padding: 4px;
     width: fit-content;
 }
 
-.errorDiv > span {
+#mainDiv .listItem {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#mainDiv img {
+    width: 4%;
+    margin-right: 10px;
+}
+
+#mainDiv img:hover { /*https://stackoverflow.com/a/25036868*/
+    transform: scale(1.9);
+    cursor: pointer;
+}
+
+#mainDiv > .errorDiv > .listItem > span {
     color: red;
+}
+
+#mainDiv > .listItem > span {
+    color: green;
 }
