--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -17,17 +17,21 @@ h1 {
 }
 
 #mainDiv > .errorDiv {
-    border: 2px solid red;
     border-radius: 4px;
     padding: 4px;
-    width: fit-content;
+    background-color: rgba(255, 0, 0, 0.075);
 }
 
 #mainDiv .listItem {
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 10px;
+    margin-top: 7px;
+    margin-bottom: 7px;
+}
+
+#mainDiv > .listItem {
+    margin-left: 7px;
 }
 
 #mainDiv img {
