Fix centering styling of h1 and adjust alpha of red background

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -9,7 +9,7 @@
 	
 	if (allAbsPaths is null || allAbsPaths.Count is 0)
 	{
-		<h1>No supported files found in pss_upload.</h1>
+		<h1>No supported files found in pss_import.</h1>
 		return;
 	}
 	
