--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -1,4 +1,4 @@
-* {
+﻿* {
     scrollbar-width: none !important;
     --left-margin: 145px; /* For things with absolute positioning, how far to be away from left side of page */
 }
@@ -42,6 +42,11 @@ h1 {
 #mainDiv img:hover { /*https://stackoverflow.com/a/25036868*/
     transform: scale(1.9);
     cursor: pointer;
+}
+
+#mainDiv input[type="text"] {
+    color: black;
+    margin-left: 10px;
 }
 
 #mainDiv > .errorDiv > .listItem > span {
