--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -24,10 +24,11 @@
 					{
 						int ii = i;
 						<div class="listItem">
+							<span class="material-icons-outlined checkbox unchecked">check_circle</span>
 							<img src=@(importFiles[i].thumbnail == null ? $"pss_import/{importFiles[i].shortPath}" : $"data:image/jpg;base64,{importFiles[i].thumbnail}") onclick="window.open('pss_import/@importFiles[i].shortPath', '_blank').focus();" alt="" loading="lazy"/>
-							<span>@importFiles[i].shortPath</span>
+							<span class="filename">@importFiles[i].shortPath</span>
 							<button class="iconBtn" id="edit @i" onclick="openEdit(@i)"><span class="material-icons-outlined">edit</span></button>
-                            <input type="text" @bind="@importFiles[ii].renamedFilename" style="display: none" id="text @i">
+							<input type="text" @bind="@importFiles[ii].renamedFilename" style="display: none" id="text @i">
 							<button class="iconBtn" id="save @i" @onclick="@(() => FilenameChanged(ii))" style="display: none"><span class="material-icons-outlined">save</span></button>
 							<button class="iconBtn" id="close @i" onclick="closeEdit(@i)" style="display: none"><span class="material-icons-outlined">close</span></button>
 						</div>
@@ -40,8 +41,9 @@
 			{
 				int ii = i;
 				<div class="listItem">
+					<span class="material-icons-outlined checkbox unchecked">check_circle</span>
 					<img src=@(importFiles[i].thumbnail == null ? $"pss_import/{importFiles[i].shortPath}" : $"data:image/jpg;base64,{importFiles[i].thumbnail}") onclick="window.open('pss_import/@importFiles[i].shortPath', '_blank').focus();" alt="" loading="lazy"/>
-					<span>@importFiles[i].shortPath</span>
+					<span class="filename">@importFiles[i].shortPath</span>
 					<button class="iconBtn" id="edit @i" onclick="openEdit(@i)"><span class="material-icons-outlined">edit</span></button>
 					<input type="text" @bind="@importFiles[ii].renamedFilename" style="display: none" id="text @i">
 					<button class="iconBtn" id="save @i" @onclick="@(() => FilenameChanged(ii))" style="display: none"><span class="material-icons-outlined">save</span></button>
